--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   awesome_dialog: ^3.0.2
   cloud_firestore: ^3.5.0
   cupertino_icons: ^1.0.5
+  date_format: ^2.0.7
   firebase_auth: ^3.11.1
   firebase_core: ^1.24.0
   firebase_messaging: ^13.0.4
